Remove client_secret
gmail access token invalidates after 7 days so there is no reason to back it up

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Secret Gmail Access Token (invalidates after 7 days anyway)
+client_secret.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
