Debugged emails not sending
rcpt_to seems to be the variable that actually controls where the email is sent, the to and cc just set what the email will visually say

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ db_backups/
 #.venv
 .venv/
 
-# Test website html
+# Test website html and test code
 Sample Websites/
+test.py
 
 # Job DB
 job_listings.sqlite3
