--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,28 @@
-apsw==3.46.0.1
+apsw==3.48.0.0
 beautifulsoup4==4.12.3
-jmapc==0.2.22
-lxml==5.2.1
-pandas==2.2.2
-playwright==1.43.0
-Requests==2.32.3
+Brotli==1.1.0
+bs4==0.0.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
+dataclasses-json==0.6.7
+greenlet==3.1.1
+idna==3.10
+jmapc==0.2.23
+lxml==5.3.0
+marshmallow==3.26.0
+mypy-extensions==1.0.0
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+playwright==1.49.1
+pyee==12.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
+sseclient==0.0.27
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
